--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .bannerBgImage{
     height: 100vh;
-    background: url("images/Bannerimage.jpg");
+    background: url("Bannerimage.jpg");
     background-size: cover;
     position: relative;
 }
